<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent">
<RelativeLayout
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

  <TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:text="@string/wall"
    android:textSize="18sp" />

  <Spinner
    android:id="@+id/spinnerWall"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView1"
    android:layout_centerHorizontal="true"
    android:entries="@array/optionsTheme" />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/spinnerWall"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:text="@string/color"
    android:textSize="18sp" />

  <Spinner
    android:id="@+id/spinnerColor"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView2"
    android:layout_centerHorizontal="true"
    android:entries="@array/snakeColor" />

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/spinnerColor"
    android:layout_marginTop="20dp"
    android:textSize="18sp"
    android:text="@string/AI" />

  <Spinner
    android:id="@+id/spinnerAi"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView3"
    android:layout_centerHorizontal="true"
    android:entries="@array/optionsAi" />

  <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/spinnerAi"
    android:textSize="18sp"
    android:layout_marginTop="20dp"
    android:text="@string/speed" />

  <Spinner
    android:id="@+id/spinnerSpeed"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView4"
    android:layout_centerHorizontal="true"
    android:entries="@array/optionsSpeed" />
  
  <TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/spinnerSpeed"
    android:textSize="18sp"
    android:layout_marginTop="20dp"
    android:text="@string/mode" />

  <Spinner
    android:id="@+id/spinnerMode"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView5"
    android:layout_centerHorizontal="true"
    android:entries="@array/optionsMode" />

  <Button
    android:id="@+id/button1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/spinnerMode"
    android:layout_centerHorizontal="true"
    android:onClick="back"
    android:text="@string/back" />

</RelativeLayout>
</ScrollView>
